--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,47 @@ body {
     background-color: #28363D;
     margin: 2%;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1.5fr 3fr;
     grid-template-rows: 1fr 6fr;
+    font-size: 1.2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 1,
+  'wght' 600,
+  'GRAD' 200,
+  'opsz' 24;
+  color: #28363D;
+  }
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+.material-symbols-rounded {
+    color: #28363D;
+}
+
+#logo {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    justify-self: center;
+}
+
+#logo img {
+    max-height: 80px;
 }
 
 #sidebar {
+    display: grid;
+    height: 100%;
+    align-items: start;
+    gap: 5%;
+    grid-template-columns: 1fr 3fr;
     background-color: #6D9197;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
@@ -16,6 +52,30 @@ body {
 
 #header {
     background-color: #2F575D;
+    display: grid;
+    align-items: center;
+    justify-content: start;
+}
+
+form {
+    display: grid;
+    grid-template-columns: .5fr 3fr;
+    gap: 1rem;
+    height: 3rem;
+}
+
+#header label span {
+    font-size: 2.6rem;
+}
+
+input {
+    appearance: none;
+    border-radius: 1.625rem;
+    border: none;
+    outline: none;
+    padding: .2rem .4rem;
+    font-size: .8rem;
+    max-height: 2rem;
 }
 
 #main-content {
