--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ h1, h2, h3 {
     height: auto;
     width: 100vw;
     background-color: #99aead;
-    margin: 2%;
     display: grid;
     grid-template-columns: 1.5fr 3fr;
     grid-template-rows: 1fr auto-fit;
@@ -51,8 +50,9 @@ a {
 
 #sidebar {
     position: sticky;
-    top: 0px;
+    top: 0;
     z-index: 101;
+    padding: 2rem 0 2rem 2rem;
     display: grid;
     height: 100%;
     align-items: start;
@@ -61,7 +61,7 @@ a {
     background-color: #6D9197;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
-    height: 100vh;
+    height: 98vh;
 }
 
 #header {
@@ -151,6 +151,10 @@ input {
     justify-self: end;
 }
 
+#right-side-container {
+    padding-right: 1rem;
+}
+
 #announcements-container, #updates-container {
     display: grid;
     grid-template-columns: 1fr;
@@ -175,10 +179,6 @@ input {
     #main-container {
         margin: 0;
     }
-
-    #sidebar {
-        padding-left: 1rem;
-    }
 }
 
 @media (width > 1023px) {
@@ -191,6 +191,8 @@ input {
     #header {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr;
+        position: sticky;
+        top: 0;
     }
 
     #header form {
@@ -212,9 +214,75 @@ input {
     }
 
     #announcements-container {
-        grid-template-rows: 5% 95% 
+        grid-template-rows: auto 1fr;
     }
 
-    
+    .announcement {
+        height: fit-content;
+    }
 
+    #announcements-inner-container {
+        height: fit-content;
+    }
+
+    #card-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .card {
+        display: grid;
+        height: 200px;
+        overflow: auto;
+        padding: .5rem;
+        margin: 0;
+    }
+
+    .card-icons {
+        align-self: end;
+    }
+
+    #updates-container {
+        display: grid;
+        grid-column: 2 / 3;
+        margin-top: 2rem;
+    }
+}
+
+@media (width > 1260px) {
+    #main-container {
+        grid-template-columns: auto 4fr auto;
+    }
+
+    #header {
+        grid-template-columns: 30% auto-fill 20%;
+        grid-row: 1 / 1;
+        grid-column: 2 / -1;
+    }
+
+    #top-right-header {
+        grid-column: 3 / 4;
+        grid-template-columns: auto auto 1fr;
+        justify-self: end;
+    }
+
+    #top-right-header #user-name {
+        font-size: 2rem;
+    }
+
+    .card {
+        height: 20rem;
+    }
+
+    #header-title {
+        width: fit-content;
+        grid-area: 1 / 2 / 2 / 3;
+        justify-self: start;
+    }
+
+    #header-title::before {
+        font-size: 2.5rem;
+        font-weight: 600;
+        content: "TTRPG Dashboard";
+    }
 }
